--- a/front-end/package.json
+++ b/front-end/package.json
@@ -19,9 +19,13 @@
     "lint:styles": "stylelint **/*.css --config .stylelintrc.json --ignore-disables --allow-empty-input"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@chakra-ui/react": "^1.8.8",
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "12.1.4",
     "@testing-library/user-event": "13.5.0",
+    "framer-motion": "^6.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router-dom": "^5.3.3",
