build: adiciona font do chakra

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -19,9 +19,11 @@
     "lint:styles": "stylelint **/*.css --config .stylelintrc.json --ignore-disables --allow-empty-input"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
-    "@chakra-ui/react": "^1.8.8",
+    "@fontsource/raleway": "^4.5.9",
+    "@fontsource/roboto": "^4.5.7",
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "12.1.4",
     "@testing-library/user-event": "13.5.0",
