--- a/package.json
+++ b/package.json
@@ -54,5 +54,8 @@
       "__TESTDESC__": true,
       "__TESTFILE__": true
     }
+  },
+  "dependencies": {
+    "@chakra-ui/layout": "^2.1.1"
   }
 }
